# html2tex-lib

./: CMakeLists.txt  LICENSE  README.md
cmake/: html2texConfig.cmake.in
include/: HtmlToLatexConverter.h  html2tex.h  html_parser.h  htmltex.h
source/: HtmlParser.cpp  HtmlToLatexConverter.cpp  html2tex.c  html2tex_css.c  html2tex_dom_utils.c  html2tex_queue_utils.c  html2tex_utils.c  html_converter.cpp  html_minify.c  html_parser.c  html_parser.cpp  html_prettify.c  tex_gen.c  tex_image_utils.c
